# CLI-Archiver

./: CMakeLists.txt  README.md
include/: decoder.hpp  encoder.hpp
src/: archiver.cpp  decoder.cpp  encoder.cpp  main.cpp
